tests/suite/snapshots/suite__case_dk95_03.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Separator
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 2
    line: 0
    column: 2
- token: Break
  start:
    index: 2
    line: 0
    column: 2
  end:
    index: 4
    line: 1
    column: 0
- token: Indent
  start:
    index: 4
    line: 1
    column: 0
  end:
    index: 4
    line: 1
    column: 0
- token: Scalar
  start:
    index: 4
    line: 1
    column: 0
  end:
    index: 7
    line: 1
    column: 3
- token: MappingValue
  start:
    index: 7
    line: 1
    column: 3
  end:
    index: 8
    line: 1
    column: 4
- token: Separator
  start:
    index: 8
    line: 1
    column: 4
  end:
    index: 9
    line: 1
    column: 5
- token: Scalar
  start:
    index: 9
    line: 1
    column: 5
  end:
    index: 10
    line: 1
    column: 6
- token: Break
  start:
    index: 10
    line: 1
    column: 6
  end:
    index: 12
    line: 2
    column: 0

