tests/suite/snapshots/suite__case_dk95_06.snap
---
source: tests/suite/cases.gen.rs
expression: diagnostics
---
- message: "remaining tokens:   \tb: 2\r\n"
  start:
    index: 14
    line: 2
    column: 0
  end:
    index: 14
    line: 2
    column: 0

