tests/suite/snapshots/suite__case_dk95_08.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: Scalar
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 3
    line: 0
    column: 3
- token: MappingValue
  start:
    index: 3
    line: 0
    column: 3
  end:
    index: 4
    line: 0
    column: 4
- token: Separator
  start:
    index: 4
    line: 0
    column: 4
  end:
    index: 5
    line: 0
    column: 5
- token: DoubleQuote
  start:
    index: 5
    line: 0
    column: 5
  end:
    index: 6
    line: 0
    column: 6
- token: DoubleQuoted
  start:
    index: 6
    line: 0
    column: 6
  end:
    index: 9
    line: 0
    column: 9
- token: ScalarSpace
  start:
    index: 9
    line: 0
    column: 9
  end:
    index: 11
    line: 1
    column: 0
- token: Indent
  start:
    index: 11
    line: 1
    column: 0
  end:
    index: 12
    line: 1
    column: 1
- token: Separator
  start:
    index: 12
    line: 1
    column: 1
  end:
    index: 16
    line: 1
    column: 5
- token: DoubleQuoted
  start:
    index: 16
    line: 1
    column: 5
  end:
    index: 24
    line: 1
    column: 13
- token: DoubleQuote
  start:
    index: 24
    line: 1
    column: 13
  end:
    index: 25
    line: 1
    column: 14
- token: Break
  start:
    index: 25
    line: 1
    column: 14
  end:
    index: 27
    line: 2
    column: 0

