tests/suite/snapshots/suite__case_dmg6.snap
---
source: tests/suite/cases.gen.rs
expression: diagnostics
---
- message: "remaining tokens: \" wrong: 2\\r\\n\""
  start:
    index: 15
    line: 2
    column: 0
  end:
    index: 15
    line: 2
    column: 0

