tests/suite/snapshots/suite__case_dwx9.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: Literal
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 1
- token: Break
  start:
    line: 0
    column: 1
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 1
- token: ScalarBreak
  start:
    line: 1
    column: 1
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 2
- token: ScalarBreak
  start:
    line: 2
    column: 2
  end:
    line: 3
    column: 0
- token: Indent
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 2
- token: Scalar
  start:
    line: 3
    column: 2
  end:
    line: 3
    column: 9
- token: ScalarBreak
  start:
    line: 3
    column: 9
  end:
    line: 4
    column: 0
- token: Indent
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 2
- token: Scalar
  start:
    line: 4
    column: 2
  end:
    line: 4
    column: 3
- token: ScalarBreak
  start:
    line: 4
    column: 3
  end:
    line: 5
    column: 0
- token: Indent
  start:
    line: 5
    column: 0
  end:
    line: 5
    column: 2
- token: ScalarBreak
  start:
    line: 5
    column: 2
  end:
    line: 6
    column: 0
- token: Indent
  start:
    line: 6
    column: 0
  end:
    line: 6
    column: 2
- token: Scalar
  start:
    line: 6
    column: 2
  end:
    line: 6
    column: 6
- token: ScalarBreak
  start:
    line: 6
    column: 6
  end:
    line: 7
    column: 0
- token: Indent
  start:
    line: 7
    column: 0
  end:
    line: 7
    column: 0
- token: Break
  start:
    line: 7
    column: 0
  end:
    line: 8
    column: 0
- token: Indent
  start:
    line: 8
    column: 0
  end:
    line: 8
    column: 1
- token: Comment
  start:
    line: 8
    column: 1
  end:
    line: 8
    column: 2
- token: CommentText
  start:
    line: 8
    column: 2
  end:
    line: 8
    column: 10
- token: Break
  start:
    line: 8
    column: 10
  end:
    line: 9
    column: 0

