tests/suite/snapshots/suite__case_e76z.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: Anchor
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 1
    line: 0
    column: 1
- token: AnchorName
  start:
    index: 1
    line: 0
    column: 1
  end:
    index: 2
    line: 0
    column: 2
- token: Separator
  start:
    index: 2
    line: 0
    column: 2
  end:
    index: 3
    line: 0
    column: 3
- token: Scalar
  start:
    index: 3
    line: 0
    column: 3
  end:
    index: 4
    line: 0
    column: 4
- token: MappingValue
  start:
    index: 4
    line: 0
    column: 4
  end:
    index: 5
    line: 0
    column: 5
- token: Separator
  start:
    index: 5
    line: 0
    column: 5
  end:
    index: 6
    line: 0
    column: 6
- token: Anchor
  start:
    index: 6
    line: 0
    column: 6
  end:
    index: 7
    line: 0
    column: 7
- token: AnchorName
  start:
    index: 7
    line: 0
    column: 7
  end:
    index: 8
    line: 0
    column: 8
- token: Separator
  start:
    index: 8
    line: 0
    column: 8
  end:
    index: 9
    line: 0
    column: 9
- token: Scalar
  start:
    index: 9
    line: 0
    column: 9
  end:
    index: 10
    line: 0
    column: 10
- token: Break
  start:
    index: 10
    line: 0
    column: 10
  end:
    index: 12
    line: 1
    column: 0
- token: Indent
  start:
    index: 12
    line: 1
    column: 0
  end:
    index: 12
    line: 1
    column: 0
- token: Alias
  start:
    index: 12
    line: 1
    column: 0
  end:
    index: 13
    line: 1
    column: 1
- token: AnchorName
  start:
    index: 13
    line: 1
    column: 1
  end:
    index: 14
    line: 1
    column: 2
- token: Separator
  start:
    index: 14
    line: 1
    column: 2
  end:
    index: 15
    line: 1
    column: 3
- token: MappingValue
  start:
    index: 15
    line: 1
    column: 3
  end:
    index: 16
    line: 1
    column: 4
- token: Separator
  start:
    index: 16
    line: 1
    column: 4
  end:
    index: 17
    line: 1
    column: 5
- token: Alias
  start:
    index: 17
    line: 1
    column: 5
  end:
    index: 18
    line: 1
    column: 6
- token: AnchorName
  start:
    index: 18
    line: 1
    column: 6
  end:
    index: 19
    line: 1
    column: 7
- token: Break
  start:
    index: 19
    line: 1
    column: 7
  end:
    index: 21
    line: 2
    column: 0

