tests/suite/snapshots/suite__case_ehf6.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: TagHandle
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 2
    line: 0
    column: 2
- token: TagSuffix
  start:
    index: 2
    line: 0
    column: 2
  end:
    index: 5
    line: 0
    column: 5
- token: Separator
  start:
    index: 5
    line: 0
    column: 5
  end:
    index: 6
    line: 0
    column: 6
- token: MappingStart
  start:
    index: 6
    line: 0
    column: 6
  end:
    index: 7
    line: 0
    column: 7
- token: Break
  start:
    index: 7
    line: 0
    column: 7
  end:
    index: 9
    line: 1
    column: 0
- token: Indent
  start:
    index: 9
    line: 1
    column: 0
  end:
    index: 9
    line: 1
    column: 0
- token: Separator
  start:
    index: 9
    line: 1
    column: 0
  end:
    index: 11
    line: 1
    column: 2
- token: Scalar
  start:
    index: 11
    line: 1
    column: 2
  end:
    index: 12
    line: 1
    column: 3
- token: MappingValue
  start:
    index: 12
    line: 1
    column: 3
  end:
    index: 13
    line: 1
    column: 4
- token: Separator
  start:
    index: 13
    line: 1
    column: 4
  end:
    index: 14
    line: 1
    column: 5
- token: TagHandle
  start:
    index: 14
    line: 1
    column: 5
  end:
    index: 16
    line: 1
    column: 7
- token: TagSuffix
  start:
    index: 16
    line: 1
    column: 7
  end:
    index: 19
    line: 1
    column: 10
- token: Break
  start:
    index: 19
    line: 1
    column: 10
  end:
    index: 21
    line: 2
    column: 0
- token: Indent
  start:
    index: 21
    line: 2
    column: 0
  end:
    index: 21
    line: 2
    column: 0
- token: Separator
  start:
    index: 21
    line: 2
    column: 0
  end:
    index: 23
    line: 2
    column: 2
- token: SequenceStart
  start:
    index: 23
    line: 2
    column: 2
  end:
    index: 24
    line: 2
    column: 3
- token: Separator
  start:
    index: 24
    line: 2
    column: 3
  end:
    index: 25
    line: 2
    column: 4
- token: Scalar
  start:
    index: 25
    line: 2
    column: 4
  end:
    index: 26
    line: 2
    column: 5
- token: CollectionEntry
  start:
    index: 26
    line: 2
    column: 5
  end:
    index: 27
    line: 2
    column: 6
- token: Separator
  start:
    index: 27
    line: 2
    column: 6
  end:
    index: 28
    line: 2
    column: 7
- token: TagHandle
  start:
    index: 28
    line: 2
    column: 7
  end:
    index: 30
    line: 2
    column: 9
- token: TagSuffix
  start:
    index: 30
    line: 2
    column: 9
  end:
    index: 33
    line: 2
    column: 12
- token: Separator
  start:
    index: 33
    line: 2
    column: 12
  end:
    index: 34
    line: 2
    column: 13
- token: Scalar
  start:
    index: 34
    line: 2
    column: 13
  end:
    index: 35
    line: 2
    column: 14
- token: SequenceEnd
  start:
    index: 35
    line: 2
    column: 14
  end:
    index: 36
    line: 2
    column: 15
- token: Break
  start:
    index: 36
    line: 2
    column: 15
  end:
    index: 38
    line: 3
    column: 0
- token: Indent
  start:
    index: 38
    line: 3
    column: 0
  end:
    index: 38
    line: 3
    column: 0
- token: MappingEnd
  start:
    index: 38
    line: 3
    column: 0
  end:
    index: 39
    line: 3
    column: 1
- token: Break
  start:
    index: 39
    line: 3
    column: 1
  end:
    index: 41
    line: 4
    column: 0

